--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
      <script>
        function onSubmit(token) {
-         document.getElementById("demo-form").submit();
+         grecaptcha.execute();
        }
      </script>
   </head>
   <body>
-    <form id='demo-form' action="?" method="POST">
+    <form id='demo-form' action="#" method="POST">
       <button class="g-recaptcha" data-sitekey="6LcHqnkUAAAAAJ9pm-tQ2455kWk7UPR2fPZ1_LVw" data-callback='onSubmit'>Submit</button>
       <br/>
     </form>
