Added data-size attribute

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <form id='demo-form' action="#" method="POST">
-      <button class="g-recaptcha" data-sitekey="6LcHqnkUAAAAAJ9pm-tQ2455kWk7UPR2fPZ1_LVw" data-callback='onSubmit'>Submit</button>
+      <button class="g-recaptcha" data-sitekey="6LcHqnkUAAAAAJ9pm-tQ2455kWk7UPR2fPZ1_LVw" data-callback='onSubmit' data-size="invisible">Submit</button>
       <br/>
     </form>
   </body>
